# tower-openapi-client

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.MD  README.md  TODO.MD  TODO.md
.github/workflows/: ci.yml  release.yml
compile-check/: Cargo.toml  build.rs
compile-check/fixtures/: mini.yml
compile-check/src/: lib.rs
compile-check/tests/: smoke.rs
docs/design/: client-ext.md  path-mod-reorg.md  security.md
docs/issues/: README.md  b1-oversized-integer-literals.md  b2-boolean-exclusive-min-max.md  b3-nullable-keyword-dropped.md  b5-nullable-vec.md
examples/daytona/: Cargo.toml  README.md  build.rs
examples/daytona/fixtures/: openapi.json
examples/daytona/src/: lib.rs  main.rs
examples/github/: Cargo.toml  README.md  build.rs
examples/github/src/: lib.rs  main.rs
examples/openai/: Cargo.toml  README.md  build.rs
examples/openai/src/: lib.rs  main.rs
examples/petstore/: Cargo.toml  README.md  build.rs
examples/petstore/src/: lib.rs  main.rs
src/: docs.rs  generator.rs  lib.rs  operations.rs  runtime.rs
src/components/: schema.rs
src/operations/: operation.rs
tests/: test_api_client.rs  test_e2b_yaml_spec.rs  test_full_build.rs  test_gen.rs  test_merging_and_recursion.rs  test_operations.rs  test_petstore31_json_spec.rs  test_runtime_codegen.rs  test_runtime_surface.rs  test_sum_types.rs
toac/: Cargo.toml
toac-build/: Cargo.toml
toac-build/src/: attrs.rs  builder.rs  components.rs  constants.rs  docs.rs  generator.rs  lib.rs  naming.rs  operations.rs  path_mod.rs  security.rs  servers.rs
toac-build/src/components/: schema.rs
toac-build/src/operations/: operation.rs
toac-build/src/operations/operation/: test.rs
toac-build/tests/: test_codecs.rs  test_discriminator_and_maps.rs  test_e2b_yaml_spec.rs  test_full_build.rs  test_merging_and_recursion.rs  test_operations.rs  test_petstore31_json_spec.rs  test_runtime_codegen.rs  test_security.rs  test_servers.rs  test_spec_metadata.rs  test_sum_types.rs
toac-build/tests/test_petstore31_json_spec/: openapi.json
toac/src/: accept.rs  body.rs  compat.rs  error.rs  lib.rs  request.rs  response.rs  security.rs  server.rs
toac/src/body/: codec.rs
toac/src/body/codec/: form.rs  json.rs  multipart.rs  ndjson.rs  octet.rs  sse.rs  text.rs  xml.rs
toac/src/compat/: reqwest.rs
toac/src/request/: parameter.rs
toac/src/request/parameter/: test.rs
toac/tests/: test_api_client.rs  test_codecs.rs  test_reqwest_backend.rs  test_runtime_surface.rs  test_security.rs
