[package]
name = "tower-openapi-client"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1"
oas3 = { version = "0.21", features = ["yaml-spec"] }
# proc-macro2 = "1.0.101"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
thiserror = "2"
serde_json = "1"
proc-macro2 = "1"

tower = { version = "0", features = ["util"], optional = true }
tower-http = { version = "0", optional = true  }
http-body = { version = "1", optional = true  }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }


[dev-dependencies]
anyhow = "1"
tower = "0"
tower-http = "0"
http = "1"
http-body = { version = "1" }
http-body-util = { version = "0.1", features = ["full"] }
bytes = "1"
prettyplease = "0.2"
indoc = "2"
futures-executor = "0.3"
serde = { version = "1", features = ["derive"] }

[features]
default = ["runtime"]
chrono = []
uuid = []
runtime = [
    "dep:tower",
    "dep:tower-http",
    "dep:http-body",
    "dep:http-body-util",
    "dep:bytes",
    "dep:serde",
]