[workspace]
resolver = "3"
# In-tree crates:
# - `toac`          : the runtime library the generated client links against
# - `toac-build`    : the code generator, invoked from build scripts
# - `compile-check` : private crate that runs the generator against a
#                     fixture spec and compiles the result, so any
#                     regression in emitted code surfaces as a build error
# - `examples/*`    : usage walkthrough on a real-world spec; opt-in
members = ["toac", "toac-build", "compile-check", "examples/*"]
# Keep day-to-day `cargo test` / `cargo build` on the library + its
# compile guard; the example is a `cargo run -p petstore-example` affair.
default-members = ["toac", "toac-build", "compile-check"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# In-tree crates, referenced by both compile-check and the petstore
# example through `{ workspace = true }`.
toac = { path = "toac", version = "0.1.0" }
toac-build = { path = "toac-build", version = "0.1.0" }

# Shared third-party deps so every crate in the workspace picks the same
# version. Individual crates opt into features as needed.
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
serde = "1"
serde_json = "1"
thiserror = "2"
tower = "0.5"
tower-http = "0.6"
oas3 = { version = "0.21", features = ["yaml-spec"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
base64 = "0.22"
percent-encoding = "2"
serde_urlencoded = "0.7"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false }
# Dev / tooling.
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-executor = "0.3"
tokio = { version = "1", features = ["full"] }
indoc = "2"
prettyplease = "0.2"
uuid = { version = "1", features = ["serde"] }
wiremock = "0.6"
