[workspace]
resolver = "3"
# In-tree crates:
# - `toac`       : the runtime library the generated client links against
# - `toac-build` : the code generator, invoked from build scripts
# - `examples/*` : usage walkthroughs on real-world specs; opt-in
members = ["toac", "toac-build", "examples/*"]
# Submodule directories under `examples/` host upstream OpenAPI specs (no
# `Cargo.toml`); cargo would otherwise try to treat them as workspace
# members because of the glob above.
exclude = ["examples/openai-openapi", "examples/github-openapi"]
# `cargo test` / `cargo build` at the workspace root only touches the
# library + generator. Examples are opt-in via `-p <example>`.
default-members = ["toac", "toac-build"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/4t145/tower-openapi-client"
homepage = "https://github.com/4t145/tower-openapi-client"
readme = "README.md"
keywords = ["openapi", "tower", "http", "client", "codegen"]
categories = ["web-programming::http-client", "api-bindings"]
rust-version = "1.85"

[workspace.dependencies]
# In-tree crates, referenced by examples through `{ workspace = true }`.
toac = { path = "toac", version = "0.1.0" }
toac-build = { path = "toac-build", version = "0.1.0" }

# Shared third-party deps so every crate in the workspace picks the same
# version. Individual crates opt into features as needed.
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
serde = "1"
serde_json = "1"
thiserror = "2"
tower = "0.5"
tower-http = "0.6"
oas3 = { version = "0.22", features = ["yaml-spec"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
base64 = "0.22"
percent-encoding = "2"
serde_urlencoded = "0.7"
quick-xml = { version = "0.40", features = ["serialize"] }
sse-stream = "0.2"
futures-util = "0.3"
tracing = "0.1"
reqwest = { version = "0.13", default-features = false }
# Dev / tooling.
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-executor = "0.3"
tokio = { version = "1", features = ["full"] }
indoc = "2"
prettyplease = "0.2"
uuid = { version = "1", features = ["serde"] }
wiremock = "0.6"
