[package]
name = "toac-build"
description = "Code generator for the `toac` Tower-compatible OpenAPI client runtime. Typically invoked from a consumer's build.rs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
http = { workspace = true }
oas3 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
# Used by the `Builder` convenience API to pretty-print generated code
# before it hits `$OUT_DIR`, so compile errors in generated output
# surface with readable line numbers.
prettyplease = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
indoc = { workspace = true }
