[package]
name = "toac"
description = "Tower-compatible OpenAPI client runtime. Types and traits that generated code from `toac-build` links against."
version.workspace = true
edition.workspace = true

[dependencies]
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
# Required for HTTP Basic auth (built-in `BasicCredential`) and opt-in
# `Base64String` used by `BuildOptions::use_base64_string`.
base64 = { workspace = true }
# Percent-encoding for URL path / query construction in auth injection
# and (future) parameter rendering.
percent-encoding = { workspace = true }
# `application/x-www-form-urlencoded` codec.
serde_urlencoded = { workspace = true }
# Optional `application/xml` / `text/xml` codec.
quick-xml = { workspace = true, optional = true }
# Stream adapters used by the optional ndjson and sse codecs.
futures-util = { workspace = true, optional = true }
# Optional Server-Sent Events codec.
sse-stream = { workspace = true, optional = true }
tracing = { workspace = true }
# Optional `reqwest` backend adapter. Brings reqwest only when the
# `reqwest` feature is on; the runtime itself stays transport-agnostic.
reqwest = { workspace = true, optional = true }
[dev-dependencies]
anyhow = { workspace = true }
futures-executor = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
wiremock = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }

[features]
# Enables `Base64String`, which wraps `bytes::Bytes` and projects to/from
# standard base64 at serde / display boundaries. Required when generated
# code uses `BuildOptions::use_base64_string = true`.
base64 = []
# Enables the `reqwest` backend adapter (`toac::reqwest::ReqwestService`),
# turning a `reqwest::Client` into a `tower::Service<toac::Request>` that
# `ApiClient::new` can wrap.
reqwest = ["dep:reqwest"]
# Enables the `application/xml` / `text/xml` codec backed by quick-xml.
xml = ["dep:quick-xml"]
# Enables the `application/x-ndjson` / `application/jsonl` streaming
# decoder. The encoder side is intentionally absent — request bodies in
# OAS specs don't use these MIMEs.
ndjson = ["dep:futures-util"]
# Enables the `text/event-stream` (Server-Sent Events) streaming
# decoder, backed by `sse-stream`.
sse = ["dep:futures-util", "dep:sse-stream"]
