[package]
name = "openai-example"
version = "0.0.0"
edition.workspace = true
publish = false

[[bin]]
name = "openai-example"
path = "src/main.rs"

# `toac-build`'s `Builder` API handles parse / pretty / write, so the
# build script only needs this one dep.
[build-dependencies]
toac-build = { workspace = true }

[dependencies]
# `sse` enables the `text/event-stream` decoder used by the streaming
# Chat Completions and Responses endpoints.
toac = { workspace = true, features = ["base64", "sse"] }
bytes = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }
client-util = { version = "0.3" }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Pull `StreamExt` so the SSE demo can iterate the event stream.
futures-util = { workspace = true }
