[package]
name = "petstore-example"
version = "0.0.0"
edition.workspace = true
publish = false

[[bin]]
name = "petstore-example"
path = "src/main.rs"

# `toac-build` is the code generator; `toac` is the runtime the
# generated code calls into. This mirrors the split a typical
# downstream consumer would use.
[build-dependencies]
toac-build = { workspace = true }
oas3 = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }

[dependencies]
toac = { workspace = true, features = ["base64"] }
bytes = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }
futures-executor = { workspace = true }
